@@ -23,7 +23,7 @@ import java.util.Map;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
-import org.apache.commons.lang.StringUtils;
+import org.apache.commons.lang3.StringUtils;
 import org.openmrs.Cohort;
 import org.openmrs.OpenmrsObject;
 import org.openmrs.module.reporting.common.ObjectUtil;
@@ -99,7 +99,7 @@ public class SqlUtils {
 							indexList = new LinkedList<Integer>();
 							params.put(name, indexList);
 						}
-						indexList.add(new Integer(index));
+						indexList.add(Integer.valueOf(index));
 						index++;
 					}
 					s = StringUtils.join(sqlParams, ",");
